k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medtext
  labels:
    name: medtext
    environment: production
    app: medical-text-classification
